--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <table class="navigateur">
                 <thead>
                     <tr>
-                        <td><a href="homepage.html" aria-label="Accueil"><img src="Photo_ID.png" alt="Photo d'identité de Lila Theault" height="65"></a></td>
+                        <td><a href="homepage.html" aria-label="Accueil"><img src="photo_ID.png" alt="Photo d'identité de Lila Theault" height="65"></a></td>
                         <td><a href="CV.html">CV</a></td>
                         <td><a href="Portfolio.html">Portfolio</a></td>
                         <td><a href="Un_peu_de_blabla.html">Motivations</a></td>
