--- a/index.html
+++ b/index.html
@@ -26,9 +26,7 @@
     <main>
         <h1 id="home-title">Ravie de faire votre connaissance !</h1>
         <section class="video">
-            <video src="介绍自己.mp4" title="Petite vidéo de présentation" controls>
-                Votre navigateur ne supporte pas la lecture de vidéos HTML5.
-            </video>
+           <iframe width="560" height="315" src="https://www.youtube.com/embed/_mJH1hiBho0?si=Jo7oImMCXRxULsk5" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         </section>
     </main>
 
