--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
 
     <main>
         <h1 id="home-title">Ravie de faire votre connaissance !</h1>
-        <section class="video">
+        <div class="video">
            <iframe width="560" height="315" src="https://www.youtube.com/embed/_mJH1hiBho0?si=Jo7oImMCXRxULsk5" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-        </section>
+        </div>
     </main>
 
     <footer>
